# cachet

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain  sample-emit.bpl  sample-emit.cachet  sample-emit2.bpl  sample-emit3.bpl  sample-emit4.bpl  sample.bpl  sample.cachet  sample.z3
crates/: test.stub
crates/bpl/: Cargo.toml  build.rs
crates/bpl-tools/: Cargo.toml
crates/bpl-tree-shaker/: Cargo.toml
crates/bpl-tree-shaker/src/: lib.rs  main.rs
crates/bpl/src/: ast.rs  lib.rs  parser.rs
crates/bpl/src/ast/: ident.rs  span.rs
crates/bpl/src/parser/: error.rs  grammar.lalrpop  helpers.rs
crates/bpl/tests/: test.rs
crates/bpl/tests/samples/: kitchen_sink.bpl
crates/bpl/tests/snapshots/: test__boogie__Source__Core__LibraryDefinitions.snap.new  test__boogie__Test__aitest0__Intervals.snap.new  test__boogie__Test__aitest0__Issue25.snap.new  test__boogie__Test__aitest0__constants.snap.new  test__boogie__Test__aitest1__Bound.snap.new  test__boogie__Test__aitest1__Linear0.snap.new  test__boogie__Test__aitest1__Linear1.snap.new  test__boogie__Test__aitest1__Linear2.snap.new  test__boogie__Test__aitest1__Linear3.snap.new  test__boogie__Test__aitest1__Linear4.snap.new  test__boogie__Test__aitest1__Linear5.snap.new  test__boogie__Test__aitest1__Linear6.snap.new  test__boogie__Test__aitest1__Linear7.snap.new  test__boogie__Test__aitest1__Linear8.snap.new  test__boogie__Test__aitest1__Linear9.snap.new  test__boogie__Test__aitest1__ineq.snap.new  test__boogie__Test__aitest9__TestIntervals.snap.new  test__boogie__Test__aitest9__VarMapFixpoint.snap.new  test__boogie__Test__bitvectors__arrays.snap.new  test__boogie__Test__bitvectors__bv0.snap.new  test__boogie__Test__bitvectors__bv1.snap.new  test__boogie__Test__bitvectors__bv10.snap.new  test__boogie__Test__bitvectors__bv2.snap.new  test__boogie__Test__bitvectors__bv3.snap.new  test__boogie__Test__bitvectors__bv4.snap.new  test__boogie__Test__bitvectors__bv5.snap.new  test__boogie__Test__bitvectors__bv6.snap.new  test__boogie__Test__bitvectors__bv7.snap.new  test__boogie__Test__bitvectors__bv8.snap.new  test__boogie__Test__bitvectors__bv9.snap.new  test__boogie__Test__civl__DeviceCache.snap.new  test__boogie__Test__civl__FlanaganQadeer.snap.new  test__boogie__Test__civl__GC.snap.new  test__boogie__Test__civl__Program1.snap.new  test__boogie__Test__civl__Program2.snap.new  test__boogie__Test__civl__Program3.snap.new  test__boogie__Test__civl__Program4.snap.new  test__boogie__Test__civl__Program4_fail.snap.new  test__boogie__Test__civl__Siddharth_queue.snap.new  test__boogie__Test__civl__StoreBuffer.snap.new  (+573 more)
crates/cachet-cacheir-translator/: Cargo.toml
crates/cachet-cacheir-translator/src/: .ast.rs.swp  .parser.rs.swp  .translator.rs.rustfmt  .translator.rs.swp  ast.rs  lib.rs  main.rs  parser.rs  translator.rs
crates/cachet-cacheir-translator/src/parser/: grammar.lalrpop
crates/cachet-compiler/: Cargo.toml  compile.sh  verify.sh
crates/cachet-compiler/src/: bpl.rs  cpp.rs  interpreter.rs  lib.rs  main.rs  util.rs
crates/cachet-compiler/src/bpl/: ast.rs  flow.rs  prelude.bpl
crates/cachet-compiler/src/cpp/: ast.rs
crates/cachet-lang/: Cargo.toml
crates/cachet-lang/src/: ast.rs  built_in.rs  flattener.rs  frontend.rs  lib.rs  main.rs  normalizer.rs  parser.rs  prelude.cachet  resolver.rs  type_checker.rs  util.rs
crates/cachet-lang/src/ast/: built_ins.rs  hole.rs  ident.rs  span.rs
crates/cachet-lang/src/flattener/: ast.rs
crates/cachet-lang/src/normalizer/: ast.rs
crates/cachet-lang/src/parser/: ast.rs  error.rs  grammar.lalrpop  helpers.rs
crates/cachet-lang/src/resolver/: ast.rs  error.rs  registry.rs
crates/cachet-lang/src/type_checker/: ast.rs  error.rs  graphs.rs
crates/cachet-util/: Cargo.toml
crates/stub-compiler/: Cargo.toml
crates/stub-compiler/src/: grammar.lalrpop  main.rs  stub_ast.rs
crates/stub-verifier/: Cargo.toml
crates/stub-verifier/src/: boogie.rs  lib.rs  stub.rs
crates/stub-verifier/src/boogie/: ast.rs  emit.rs
crates/stub-verifier/src/stub/: parser.lalrpop
crates/stub-verifier/tests/: stubs.rs
crates/stub-verifier/tests/stubs/: sample1.stub  sample4.stub
eval/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  speedometer-runner.mjs
eval/scripts/: common.sh  compile-stub.sh  compile-stubs.sh  compute-metrics.sh  dump-csv.sh  generate-stubs.sh  tabulate-missing-ops.sh  translate-stub.sh  translate-stubs.sh  verify-stub.sh  verify-stubs.sh
notes/: add.cachet  arith.cachet  cacheir.cachet  codegen.cachet  getprop-codegen-raw.cachet  getprop-refs.bpl  getprop-simple.bpl  getprop-simple.cachet  getprop.bpl  getprop.cachet  hacks.bpl  hacks.bpl.bak  hacks_si.bpl  instanceof-refs.bpl  instanceof.bpl  instanceof.cachet  js.cachet  jsop.cachet  jsops.cachet  masm-prelude.bpl  masm.cachet  paper-bg.cachet  prelude.bpl  sample-emit2.bpl  sample-emit3.bpl  sample-emit5.bpl  sample.cpp  structs.cachet  utils.cachet
notes/stubs/: add-prepost.cachet  add.cachet  add_double.cachet  arguments_length.cachet  array_length.cachet  binaryarith-codegen-bitwise.cachet  binaryarith-codegen-int32add.cachet  binaryarith-codegen-int32div.cachet  binaryarith-codegen-int32mod.cachet  binaryarith-codegen-int32mul.cachet  binaryarith-codegen-int32sub.cachet  bitand.cachet  bitor.cachet  bitxor.cachet  bug1451976-buggy.cachet  bug1451976.cachet  bug1471361_buggy.cachet  bug1471361_fixed.cachet  bug1502143-buggy-min.cachet  bug1502143-buggy-reduced.cachet  bug1502143-buggy.cachet  bug1502143-fixed-min.cachet  bug1502143-fixed-reduced.cachet  bug1651732-buggy.cachet  bug1651732.cachet  bug1654947-buggy.cachet  bug1654947.cachet  bug1685925-buggy.cachet  compare-codegen-anynullundefined.cachet  compare-codegen-int32.cachet  compare-codegen-strictdifferenttypes.cachet  compare_int32.cachet  (+52 more)
primavera/: .gitignore  Makefile  macros.m4  range_spec.cachet.m4
scripts/: build-boogie.sh  build-corral.sh  compile-and-verify.sh  compile.sh  run-boogie.sh  run-corral.sh  test.sh  verify.sh
src/: backend.rs  lib.rs  main.rs  util.rs
tests/: blocks.cachet  stubs.rs
(+83 files in other folders)
