[package]
name = "bpl-tree-shaker"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
Dead code eliminator for the Boogie intermediate verification language
"""
edition = "2021"

[dependencies]
anyhow = "1.0.28"
atomicwrites = "0.3.1"
bpl = { version = "0.0.0", path = "../bpl" }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
derive_more = "0.99.17"
lalrpop-util = { git = "https://github.com/PLSysSec/lalrpop", branch = "cachet" }
lazy_static = "1.4.0"
petgraph = "0.6.2"
structopt = "0.3.22"
