[package]
name = "bpl"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
AST, parser, and printer for the Boogie intermediate verification language
"""
edition = "2021"

[build-dependencies]
anyhow = "1.0.28"
lalrpop = { git = "https://github.com/PLSysSec/lalrpop", branch = "cachet" }
proc-macro2 = "1.0.49"
quote = "1.0.23"
walkdir = "2.3.2"

[dependencies]
anyhow = "1.0.28"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
derive_more = "0.99.16"
indent_write = "2.2.0"
internment = "0.5.4"
joinery = "3.1.0"
lalrpop-util = { git = "https://github.com/PLSysSec/lalrpop", branch = "cachet" }
lazy_static = "1.4.0"
phf = { version = "0.10.1", features = ["macros"] }

[dev-dependencies]
insta = "1.23.0"
regex = "1.7.0"
similar-asserts = "1.4.2"
