[package]
name = "cachet-cacheir-translator"
version = "0.0.0"
authors = [
  "John Renner <john@jrenner.net>",
  "Michael Smith <michael@spinda.net>"
]
license = "MPL-2.0"
description = """
Language and toolset for trustworthy JIT implementation
"""
edition = "2021"

[dependencies]
cachet-lang = { path = "../cachet-lang" }
cachet-util = { path = "../cachet-util" }
derive_more = "0.99.16"
lazy_static = "1.4.0"
nom = "7.1.1"
strum = "0.24.1"
strum_macros = "0.24.3"
