[package]
name = "cachet-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.28"
cachet-lang = {path="../cachet-lang"}
codespan-reporting = "0.11.1"
derive_more = "0.99.16"
enumset = "1.0.6"
iterate = "1.0.0"
indent_write = "2.2.0"
lazy_static = "1.4.0"
structopt = "0.3.22"
typed-index-collections = "3.0.3"

[dependencies.fix-hidden-lifetime-bug]
version = "0.2.4"
default-features = false
