[package]
name = "cachet-compiler"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
Language and toolset for trustworthy JIT implementation
"""
edition = "2021"

[dependencies]
anyhow = "1.0.28"
cachet-lang = { path = "../cachet-lang" }
cachet-util = { path = "../cachet-util" }
codespan-reporting = "0.11.1"
derive_more = "0.99.16"
enumset = "1.0.6"
fix-hidden-lifetime-bug = { version = "0.2.4", default-features = false }
iterate = "1.0.0"
lazy_static = "1.4.0"
structopt = "0.3.22"
typed-index-collections = "3.0.3"
void = "1.0.2"
enum-map = "2.0.0"
enum-iterator = "0.8.1"
