[package]
name = "cachet-lang"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
Language and toolset for trustworthy JIT implementation
"""
edition = "2021"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
enumset = "1.0.6"
iterate = "1.0.0"
lalrpop-util = "0.19.6"
lazy_static = "1.4.0"
petgraph = "0.5.1"
regex = "1.5.4"
thiserror = "1.0.25"
