[package]
name = "cachet-lang"
version = "0.0.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
description = """
Language and toolset for trustworthy JIT implementation
"""
edition = "2021"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
anyhow = "1.0.28"
cachet-util = { path = "../cachet-util" }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
derive_more = "0.99.16"
enumset = "1.0.6"
internment = "0.5.4"
iterate = "1.0.0"
lalrpop-util = "0.19.7"
lazy_static = "1.4.0"
petgraph = "0.5.1"
phf = { version = "0.10.1", features = ["macros"] }
regex = "1.5.4"
structopt = "0.3.22"
thiserror = "1.0.25"
typed-index-collections = "3.0.3"
void = "1.0.2"
enum-iterator = "0.8.1"
