[package]
name = "stub-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = {git = "https://github.com/djrenren/lalrpop", branch="precedence_with_macros"}

[dependencies]
lalrpop-util = {git = "https://github.com/djrenren/lalrpop", branch="precedence_with_macros"}
derive_more = "0.99.16"
