[package]
name = "stub-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
cachet-lang = {path="../cachet-lang"}
indent_write = "2.2.0"
iterate = "1.0.0"
